--- a/Semaine4_Causalite/Labo/SOC8655_Labo4.1_Donnees_experimentales.Rmd
+++ b/Semaine4_Causalite/Labo/SOC8655_Labo4.1_Donnees_experimentales.Rmd
@@ -37,16 +37,18 @@ getwd()
 library(tidyverse)
 library(summarytools)
 
-dhs_ipv <- read_csv("../dhs_ipv.csv")
+dhs_ipv <- read_csv("../Data/dhs_ipv.csv")
 
 dhs_ipv <-
   dhs_ipv %>% 
- # select(beat_burnfood!= "NA") %>% 
-  mutate(beat_burnfood_cat = factor(ntile(beat_burnfood, 4), labels = c('Très faible', 'Faible', 'Élevé', 'Très élevé')),
-         beat_goesout_cat = factor(ntile(beat_goesout, 4), labels = c('Très faible', 'Faible', 'Élevé', 'Très élevé')),
+  mutate(beat_burnfood_cat = factor(ntile(beat_burnfood, 4), 
+                                    labels = c('Très faible', 'Faible', 'Élevé', 'Très élevé')),
+         beat_goesout_cat = factor(ntile(beat_goesout, 4), 
+                                   labels = c('Très faible', 'Faible', 'Élevé', 'Très élevé')),
          no_media_cat = factor(ntile(no_media, 3), labels = c('Riche', 'Moyen', 'Pauvre'))) 
 
 head(dhs_ipv)
+
 ```  
 
 ## Association
@@ -74,13 +76,45 @@ ggplot(dhs_ipv) +
 
 ```  
 
+Une meilleure présentation de ce graphique est importante.
+
+1. Enlever les valeurs manquantes:
+    - drop_na
+    - na.rm 
+    - !(is.na)
+
+```{r, echo=FALSE, out.width = '75%', warning=FALSE, message=FALSE}
+
+ggplot(dhs_ipv %>% drop_na()) +
+  geom_bar(aes(x = no_media_cat, fill = beat_burnfood_cat), position = "dodge") +
+  ggtitle("Association entre ouverture aux médias et acceptation de la violence conjugale") +
+  xlab("Type de pays selon l'ouverture aux médias") +
+  ylab("Effectif") +
+  theme_bw()
+
+``` 
+
+2. Le diagramme de barres empilées ets plus approprié.
+
+```{r, echo=FALSE, out.width = '75%', warning=FALSE, message=FALSE}
+
+ggplot(dhs_ipv %>% drop_na()) +
+  geom_bar(aes(x = no_media_cat, fill = beat_burnfood_cat), position = "fill") +
+  ggtitle("Association entre ouverture aux médias et acceptation de la violence conjugale") +
+  xlab("Type de pays selon l'ouverture aux médias") +
+  ylab("Effectif") +
+  theme_bw()
+
+``` 
+
+
 ## Association 
 
-  - Représentation graphique (boxplot) dans le cas d'une variable qualitative et d'une variable quantitative
+- Représentation graphique (boxplot) dans le cas d'une variable qualitative et d'une variable quantitative
   
 ```{r, out.width = '70%', message = FALSE, echo=FALSE, warning=FALSE}
 
-ggplot(dhs_ipv) +
+ggplot(dhs_ipv %>% drop_na()) +
   geom_boxplot(aes(x = no_media_cat, y = beat_burnfood, color = no_media_cat)) +
   ggtitle("Association entre ouverture aux médias et acceptation de la violence conjugale") +
   xlab("Type de pays selon l'ouverture aux médias") +
@@ -88,6 +122,19 @@ ggplot(dhs_ipv) +
 
 ```  
 
+- Ici, vous voyez que la légende n'est pas importante.
+
+```{r, out.width = '70%', message = FALSE, echo=FALSE, warning=FALSE}
+
+ggplot(dhs_ipv %>% drop_na()) +
+  geom_boxplot(aes(x = no_media_cat, y = beat_burnfood, color = no_media_cat)) +
+  ggtitle("Association entre ouverture aux médias et acceptation de la violence conjugale") +
+  xlab("Type de pays selon l'ouverture aux médias") +
+  ylab("% qui estime qu'une femme doit être battue (beat_burnfood)") +
+  theme_bw() +
+  theme(legend.position = "none") 
+
+``` 
 
 ## Association 
 
@@ -120,17 +167,37 @@ ggplot(dhs_ipv, aes(x = no_media, y = beat_burnfood)) +
 
 ```
 
+- On peut décider d'avoir la couleur que nous souhaitons nous-mêmes
+- Un merveilleux site pour vous aider dans le choix de vos couleurs: 
+
+https://coolors.co/d496a7-461220-bbbe64-067bc2-556f44
+
+
+
+```{r}
+
+cbbPalette <- c("#000000", "#E69F00", "#CC79A7", "#56B4E9", "#F0E442", "#D55E00", "#0072B2", "#009E73")
+
+ggplot(dhs_ipv, aes(x = no_media, y = beat_burnfood)) +
+  geom_point(aes(color = region)) +
+  geom_smooth(aes(color = region), method = lm, se = FALSE,  formula = y ~ x) +
+  scale_colour_manual(values = cbbPalette) 
+
+```
+
+
+
 # 2. Causalité à partir de données expérimentales
 
 Comment est prouvé la discrimination sur le marché du travail? 
-- Voir présentation de Michele.
+- Voir présentation. 
 
 
 ## Exemple 1 discrimination raciale sur le marché du travail
 
 - Données
 
-Chaque package contient =des données pour pouvoir tester facilement les fonctions du package. Ici, nous allons utiliser les données **resume** du package qss.
+Chaque package contient des données pour pouvoir tester facilement les fonctions du package. Ici, nous allons utiliser les données **resume** du package qss.
 
 Voici les informations de cette base de données:
 
@@ -146,16 +213,17 @@ Variable                  Description
                           **si un rappel a été effectué**
 
 ```{r, echo=FALSE}
-#install.packages("qss")
-#install.packages("devtools")
 
 #library("devtools")
 #install_github("kosukeimai/qss-package", build_vignettes = TRUE)
 
+rm(list = ls())
+
 library(qss)
+library(summarytools)
+library(tidyverse)
 
 data("resume", package = "qss")
-#data(package = "summarytools")
 
 # resume <- read_csv("resume.csv")        # What you will do to import the data (remember your directory)
 head(resume) 
@@ -194,11 +262,13 @@ freq(resume$call)
 
 discrimination <- ctable(resume$race, resume$call, "r")
 discrimination
+
 ```
 
 - SATE = 9,65 - 6,45 = 3,2%
 
-On peut cependant penser que les deux groupes n'étaient pas identiques au début. Par exemople, si on a utilisé plus de noms féminins que de nom masculin. 
+On peut cependant penser que les deux groupes n'étaient pas identiques au début. 
+Par exemople, si on a utilisé plus de noms féminins que de nom masculin. 
 
 ## Est-ce que les deux groupes étaient similaires au début?
 
@@ -211,6 +281,9 @@ ctable(resume$race, resume$sex)
 Le résultat ne peut s'expliquer par une variable de confusion comme le sexe.
 Quelle autre variable de confusion peut-expliquer ce résultat?
 
+## Discrimination différetntyielle selon le sexe?
+
+Vous feriez ceci si vous vous rendez-compte que les deux groupes sont **non balancés**, c'est à dire qu'il y a plus de femmes dans le groupe des Noirs que dans le groupe de blancs.
 
 ```{r}
 
@@ -228,7 +301,11 @@ discrimination_femme
 
 discrimination_homme <- ctable(resume_homme$race, resume_homme$call)
 discrimination_homme
+
 ```
 SATE_femme  = 9.9 - 6.6 = 3.3%
 
 SATE_homme = 8.9 - 5.8 = 3.1%
+
+On voit ici que la discxrimination ethnique est pareille pour les hommes et les femmes.
+
