--- a/Semaine4_Causalite/Labo/SOC8655_Labo4.2_Donnees_observationnelles.Rmd
+++ b/Semaine4_Causalite/Labo/SOC8655_Labo4.2_Donnees_observationnelles.Rmd
@@ -64,7 +64,7 @@ knitr::include_graphics("../Images/minimum-wage.jpg")
 ```
 
 
-## Données
+## Données (mettre la)
 
 ```{r, minwage, echo=FALSE}
 
