--- a/Semaine4_Causalite/Labo/SOC8655_Labo4.2_Donnees_observationnelles.Rmd
+++ b/Semaine4_Causalite/Labo/SOC8655_Labo4.2_Donnees_observationnelles.Rmd
@@ -73,6 +73,7 @@ rm(list = ls())
 library(tidyverse)
 library(summarytools)
 
+data(package = "qss")
 data("minwage", package = "qss")
 
 head(minwage)
