--- a/Seance1-Presentation_cours/Slides/SOC8655_S1.2_Présentation du cours.Rmd
+++ b/Seance1-Presentation_cours/Slides/SOC8655_S1.2_Présentation du cours.Rmd
@@ -108,7 +108,7 @@ Examens                                    Examens + Devoirs + Lectures
 
 
 ```{r, out.width='90%', echo = FALSE, fig.align = 'center'}
-knitr::include_graphics("/Users/visseho/OneDrive - UQAM/Cours/Images_cours/differences.png")
+knitr::include_graphics("../../Images/differences.png")
 ```
 
 
