--- a/Seance10-Regression_non_linéaire/Slides/SOC8655_S10_Regression_avec_variable_dépendante_dichotomique.Rmd
+++ b/Seance10-Regression_non_linéaire/Slides/SOC8655_S10_Regression_avec_variable_dépendante_dichotomique.Rmd
@@ -20,7 +20,7 @@ output:
 - Variables dépendantes dichotomiques
   - Exemple
   - Estimation:
-    - Pourquoi l'OLS n'est pas approprié
+    - Pourquoi le MCO n'est pas approprié
     - Logit ou probit?
   - Estimation
   - Interprétation
@@ -57,18 +57,18 @@ Introduction
 ## Introduction
 
 - L'analyse de régression d'une variable qualitative binaire ou dichotomique est un problème courant en sociologie
-- Ces modèles se concentrent sur les déterminants de la probabilité p d'occurrence d'un résultat plutôt que sur un autre résultat qui se produit avec une probabilité de 1-p.
+- Ces modèles se concentrent sur les déterminants de la probabilité p d'occurrence d'un résultat plutôt que d'un autre résultat qui se produit avec une probabilité de 1-p.
 - Exemples:
- - Modéliser si le premier rapport sexuel a eu lieu pendant l'adolescence ou non
- - Modéliser si une personne a utilisé une méthode de contraception moderne ou pas
- - Donnez-moi d'autres exemples
+   - Modéliser si le premier rapport sexuel a eu lieu pendant l'adolescence ou non
+   - Modéliser si une personne a utilisé une méthode de contraception moderne ou pas
+   - Donnez-moi d'autres exemples
 
 Estimation
 ==============================================
 
 ## Estimation
 
-- Dans l'analyse de régression, nous voulons mesurer comment la probabilité p varie d'un individu à l'autre en fonction des régresseurs.
+- Dans l'analyse de régression, nous voulons mesurer comment la probabilité p varie d'un individu à l'autre en fonction des régresseurs (variables indépendantes0.
 
 - Trois principales approches d'estimation sont utilisées:
   1. Le modèle de probabilité linéaire
@@ -78,15 +78,21 @@ Estimation
 
 ## 1. Le modèle de probabilité linéaire
 
-- $Y_i = \beta_0 + \beta_1X_i + ... + \beta_kX_k + \epsilon+j$
+>- $Y_i = \beta_0 + \beta_1X_i + ... + \beta_kX_k + \epsilon+j$
 
-- Parce que y ne peut prendre que deux valeurs, $\beta_j$ ne peut pas être interprété comme le changement de y étant donné une augmentation d'une unité de $X_j$, en maintenant tous les autres facteurs fixes: y passe de 0 à 1, ou de 1 à 0 (ou ne change pas).
+>- Parce que Y ne peut prendre que deux valeurs, $\beta_j$ ne peut pas être interprété comme le changement de Y étant donné une augmentation d'une unité de $X_j$, en maintenant tous les autres facteurs fixes: Y passe de 0 à 1, ou de 1 à 0 (ou ne change pas).
 
-- Le modèle de régression linéaire multiple avec une variable dépendante binaire est appelé le modèle de probabilité linéaire (LPM) car la probabilité de réponse est linéaire dans les paramètres $\beta_j$.
+>- Le modèle de régression linéaire multiple avec une variable dépendante binaire est appelé le modèle de probabilité linéaire (LPM) car la probabilité de réponse est linéaire dans les paramètres $\beta_j$.
 
 ## 1. Le modèle de probabilité linéaire
 
-![](/Users/visseho/OneDrive - UQAM/Cours/Images_cours/lpm.png)
+
+```{r, echo=FALSE, out.width='80%', warning=FALSE, message=FALSE}
+
+knitr::include_graphics("../Images/lpm.png")
+
+```
+
 
 - Il est évident que la droite d'estimation n'est pas appropriée pour traiter la variable dépendante dichotomique
 
@@ -94,17 +100,57 @@ Estimation
 
 - Formulation
 
-- $Y_i = \beta_0 + \beta_1X_i + ... + \beta_kX_k + \epsilon+j$
-- $Y_i = \beta_0 + \beta_1X_i + \epsilon+j$ (simple régression linéaire)
+- $Y_i = \beta_0 + \beta_1X_i + ... + \beta_kX_k + \epsilon_i$
+- $Y_i = \beta_0 + \beta_1X_i + \epsilon_i$ (simple régression linéaire)
 - $Y = X\beta + \epsilon$ sous la forme matricielle
 - $E(Y|X) = \beta_0 + \beta_1X_i + ... + \beta_kX_k$
-- Y variable dichotomique ==> P(Y = 1|X) = E(Y|X)
-- donc, E(Y|X) est interprété comme une probabilité
-- $\beta_j$ mesure le changement de la probabilité de succès lorsque $X_j$ change, en maintenant les autres facteurs fixes
+- Que vaut $E(Y|X)$ ?
+
+## 1. Le modèle de probabilité linéaire
+
+- Si Y est discrète:
+- $E(Y|X) =  \sum_kkP(Y = k|X)$
+- Y variable dichotomique prend les valeurs 0 et 1
+- $E(Y|X) =  0*P(Y = 0|X) + 1*(Y = 1|X)$
+
+==> E(Y|X) = P(Y = 1|X)
+
+>- donc, E(Y|X) est interprété comme une probabilité
+
+>- $\beta_j$ mesure le changement de la probabilité de succès lorsque $X_j$ change, en maintenant les autres facteurs fixes
+
+## 1. Le modèle de probabilité linéaire
+
+- Exemple: calcul de l'espérance quand Y est discrète
+- Soit la variable aléatoire age qui a la distribution suivante:
+
+Age   Nombre de cas
+---- -----------------
+10   5
+11   6
+12   4
+
+>- Quelle est l'espérance de Y (moyenne de Y)
+
+>- M = (5\*10 + 11\*6 +4\*12)/15
+
+## 1. Le modèle de probabilité linéaire
+
+- Vous pouvez vous rendre compte que cela est exactement:
+
+- E(Y) = 10\*P(Y=10) + 11\*P(Y=11) + 12\*P(Y=12)
+- P(Y=10) = 5/15 
+- P(Y=11) = 6/15 
+- P(Y=12) = 4/15 
+
+==> E(Y) = 10\*5/15 + 11\*6/15 + 12\*4/15
+
 
 ## 1. Le modèle de probabilité linéaire
 
 - Deux principaux problèmes avec le LPM: 
+
+
   1. La probabilité prédite est supérieure à 1 ou inférieure à 0
   2. Les termes d'erreurs sont hétéroscédastiques
 
@@ -112,14 +158,21 @@ Estimation
 
 1. Les valeurs prédites sont illimitées
 
-![](/Users/visseho/OneDrive - UQAM/Cours/Images_cours/lpm1.png)
+```{r, echo=FALSE, out.width='80%', warning=FALSE, message=FALSE}
+
+knitr::include_graphics("../Images/lpm1.png")
+
+```
+
 
 ## 1. Le modèle de probabilité linéaire
 
 2. Les termes d'erreurs sont hétéroscédastiques
-- Dans ce cas, $\epsilon_i$ prend deux valeurs:
+- $\epsilon_i$ prend deux valeurs:
 - $-X\beta$ si Y = 0 avec P(Y = 0) = $1- X\beta$
 - $(1-X\beta)$ si Y = 1 avec P(Y = 1) = $X\beta$
+
+## 1. Le modèle de probabilité linéaire
 
 Valeur de $\epsilon$       Probabilité
 -------------------------- --------------------
@@ -127,11 +180,15 @@ $-X\beta$                  $1- X\beta$
 $(1-X\beta)$               $X\beta$
 
 
-- $E(\epsilon) = -X\beta * (1- X\beta) + (1-X\beta) * X\beta$ = 0
-- $Var(\epsilon) = (-X\beta)^2 * (1- X\beta) + (1-X\beta)^2 * X\beta = X\beta(1-X\beta)$
-==> $Var(\epsilon)$ n'est pas constant
+>- $E(\epsilon) = -X\beta * (1- X\beta) + (1-X\beta) * X\beta$ = 0
+
+
+>- $Var(\epsilon) = (-X\beta)^2 * (1- X\beta) + (1-X\beta)^2 * X\beta = X\beta(1-X\beta)$
+
+>- $Var(\epsilon)$ n'est pas constante
 
 ## 1. Le modèle de probabilité linéaire
+
 - Ces deux problèmes ne sont pas insurmontables:
   - Changer la valeur des valeurs prédites
     - 0 pour toutes les valeurs négatives
@@ -141,10 +198,16 @@ $(1-X\beta)$               $X\beta$
 
 ## Modèle Logit / Probit
 
-![](/Users/visseho/OneDrive - UQAM/Cours/Images_cours/lpm.png)
+```{r, echo=FALSE, out.width='60%', warning=FALSE, message=FALSE}
 
-- Ce qu'il faut, c'est un moyen de presser les probabilités estimées à l'intérieur de l'intervalle 0-1
-- $P(Y = 1) = G(Y_i = \beta_0 + \beta_1X_i + ... + \beta_kX_k$)
+knitr::include_graphics("../Images/lpm.png")
+
+```
+
+
+>- Ce qu'il faut, c'est un moyen de "presser" les probabilités estimées à l'intérieur de l'intervalle 0-1
+
+>- $P(Y = 1) = G(Y_i = \beta_0 + \beta_1X_i + ... + \beta_kX_k$)
 
 
 ## Modèle Logit / Probit
@@ -157,7 +220,7 @@ $(1-X\beta)$               $X\beta$
   - La fonction logistique qui donne le modèle logit
 
 - Le modèle log-log complémentaire pour la distribution non symétrique
-- Pour les phénomènes rares, où la probabilité de succès est faible
+    - Pour les phénomènes rares, où la probabilité de succès est faible
 
 ## Modèle Logit / Probit : Formulation
 
@@ -166,21 +229,24 @@ $(1-X\beta)$               $X\beta$
 - $Y_i^* = \beta_0 + \beta_1X_{1i} + ... + \beta_kX_{ki} + \epsilon_i$, i allant de 1 à n
 
 - On observe :
-- $Y_i = 1$ si $Y_i^* > 0$
-- $Y_i = 0$ si $Y_i^* < 0$
+    - $Y_i = 1$ si $Y_i^* > 0$
+    - $Y_i = 0$ si $Y_i^* < 0$
 
-- $P(Y_i = 1) = P(Y_i^* > 0) = P(X\beta + \epsilon > 0)$
-- $P(Y_i = 1) = P(\epsilon > -X\beta)$
-- $P(Y_i = 1) = P(\epsilon < X\beta) = \psi(Y_i^*)$
-- Où $\psi$ est la fonction de distribution cumulative 
+>- $P(Y_i = 1) = P(Y_i^* > 0) = P(X\beta + \epsilon > 0)$
+
+>- $P(Y_i = 1) = P(\epsilon > -X\beta)$
+
+>- $P(Y_i = 1) = P(\epsilon < X\beta) = \psi(Y_i^*)$
+
+>- Où $\psi$ est la fonction de distribution cumulative 
 
 ## Modèle Logit / Probit : Estimation
 
 - Les techniques du maximum de vraisemblance sont utilisées pour estimer les paramètres
 - Pour chaque observation, la probabilité d'observation Y conditionnelle à X peut s'écrire:
-- $P(Y_i = y_i|X) = {\psi(x_i\beta)}^{y_i}{1 - \psi(x_i\beta)}^{1-y_i}$ avec $\text{$y_i$ = 0 ou 1}$
+- $P(Y_i = y_i|X) = {\psi(x_i\beta)}^{y_i}{(1 - \psi(x_i\beta))}^{1-y_i}$ avec $\text{$y_i$ = 0 ou 1}$
 
-- La vraisemblance logarithmique de l'observation i peut s'écrire:
+- Le logarithme de la vraisemblance de l'observation i peut s'écrire:
 - $l_i(\beta) = y_ilog[\psi(x_i\beta)] + (1-y_i)log[(1 - \psi(x_i\beta)]$
 - Et la vraisemblance de l'échantillon vaut:
 
@@ -226,9 +292,11 @@ Interprétation
 
 $$d(\pi_i)/d(X_1) = \beta_1\pi_i(1-\pi_i)$$
 
-- $\beta_1$ n'explique pas le changement de probabilité dû à un changement d'unité dans la variable $X_1$
-- $d(\pi_i)/d(X_1)$ dépend de la valeur des autres variables du modèle
-- Pour interpréter l'effet de X1, il faut aussi fixer $\pi_i(1-\pi_i)$
+>- $\beta_1$ n'explique pas le changement de probabilité dû à un changement d'unité dans la variable $X_1$
+
+>- $d(\pi_i)/d(X_1)$ dépend de la valeur des autres variables du modèle
+
+>- Pour interpréter l'effet de $X_1$, il faut aussi fixer $\pi_i(1-\pi_i)$
 
 ## Modèle Logit / Probit 
 
@@ -242,32 +310,38 @@ $$d(\pi_i)/d(X_1) = \beta_1\pi_i(1-\pi_i)$$
 
 **Logit** : Interprétation alternative
 
-- Odd ratio ou rapport de chance
-- $Log(\frac{\pi_i}{1-\pi_i}) = \beta_0 + \beta_1X_{1i} + ... + \beta_kX_{ki}$
-- $\frac{\pi_i}{1-\pi_i} = exp(\beta_0 + \beta_1X_{1i} + ... + \beta_kX_{ki})$
-- $\frac{\pi_i}{1-\pi_i} = exp(\beta_0)exp(\beta_1X_{1i})* ... *exp(\beta_kX_{ki})$
-- C'est ce qu'on appelle une chance ou une côte
-- Si vous faites varier X1 de 0 à 1, vous pouvez calculer le rapport de cette côte.
+>- Odd ratio ou rapport de chances
+
+>- $Log(\frac{\pi_i}{1-\pi_i}) = \beta_0 + \beta_1X_{1i} + ... + \beta_kX_{ki}$
+
+>- $\frac{\pi_i}{1-\pi_i} = exp(\beta_0 + \beta_1X_{1i} + ... + \beta_kX_{ki})$
+
+>- $\frac{\pi_i}{1-\pi_i} = exp(\beta_0)exp(\beta_1X_{1i})* ... *exp(\beta_kX_{ki})$
+
+>- C'est ce qu'on appelle une chance ou une côte
+
+>- Si vous faites varier $X_1$ de 0 à 1, vous pouvez calculer le rapport de cette côte.
 
 Autres éléments à considérer
 =======================================================
 
 ## Violation des hypothèses
 
-- Toute violation d'hypothèse comme dans le cas d'un modèle linéaire affecte les estimations et leur erreur standard
+- Toutes violations d'hypothèses comme dans le cas d'un modèle linéaire affectent les estimations et leurs erreurs standards
   - Variables omises
   - Hétéroscédasticité
   - Multicolinéarité
-  - Endogénéité…
+  - Endogénéité...
 
 ## Mesure de la "qualité d'ajustement"
 
 - En régression linéaire, ce rôle est joué par $R^2$ ou $pseudo-R^2$.
-- $R^2$ ou pseudo $R^2$ ne conviennent pas das le cas de modèle logit ou probit
+- $R^2$ ou pseudo $R^2$ ne conviennent pas dans le cas de modèle logit ou probit
 
 **Alternative**:
 
-- Tableau calculant le nombre de valeurs y = 1 correctement et incorrectement prédites et le nombre de valeurs y = 0 correctement et incorrectement prédites, où une observation est prédite comme y = 1 si la probabilité estimée dépasse une valeur fixe (souvent la moitié)
+- Tableau calculant le nombre de valeurs Y = 1 correctement et incorrectement prédites et le nombre de valeurs Y = 0 correctement et incorrectement prédites
+- Une observation est prédite comme Y = 1 si la probabilité estimée dépasse une valeur fixe (souvent la moitié)
 - Doit être utilisé avec prudence
 
 ## Test d'hypothèses
@@ -276,24 +350,23 @@ Autres éléments à considérer
   - t Student est utilisé dans le cas de la modélisation logit
   - la statistique z est utilisée dans le cas de la modélisation probit
 
-- Test de nombreuses hypothèses
+>- Test d'hypothèse de nombreuses paramètres
 
-  - Test du rapport de vraisemblance (LR) (test de Fischer en cas de régression linéaire)
-  - $LR = -2 [L(RM) - L(UM)]$ suit une loi de chie-deux à m dégré de liberté
-  -  Où RM et UM sont respectivement le modèle restreint et le modèle non restreint, m est le nombre de contraintes
+>  - Test du rapport de vraisemblance (LR) (test de Fischer en cas de régression linéaire)
+
+>  - $LR = -2 [L(RM) - L(UM)]$ suit une loi de chi-deux à m dégrés de liberté
+
+>  -  Où RM et UM sont respectivement le modèle restreint et le modèle non restreint, m est le nombre de contraintes
 
 ## Test d'hypothèses
 
 - Modèle non contraint
 
-![](/Users/visseho/OneDrive - UQAM/Cours/Images_cours/unrestricted.png)
+```{r, echo=FALSE, out.width='80%', warning=FALSE, message=FALSE}
 
-## Test d'hypothèses
+knitr::include_graphics("../Images/unrestricted.png")
 
-- Modèle contraint
-
-![](/Users/visseho/OneDrive - UQAM/Cours/Images_cours/restricted.png)
-
+```
 
 ## Test d'hypothèses
 
@@ -302,13 +375,33 @@ Autres éléments à considérer
 
 - Modèle sans restriction: probit mort jumelle femelle age15_19 age35_49 parity1 parity6 bambara primaire secondaire
   - L(UM) = -2315,8856
-- Modèle restreint: Modèle restreint: jumeau mort probit femelle age15_19 age35_49 parity1 parity6 bambara
+
+
+## Test d'hypothèses
+
+- Modèle contraint
+
+```{r, echo=FALSE, out.width='80%', warning=FALSE, message=FALSE}
+
+knitr::include_graphics("../Images/restricted.png")
+
+```
+
+
+
+## Test d'hypothèses
+
+- Modèle restreint: Modèle restreint: probit mort jumeau femelle age15_19 age35_49 parity1 parity6 bambara
   - L(RM) = -2319,2534
 - m = 2
 
-- LR = -2*(-2319,2534 +2315,8856) = 6,74
-- Chi-deux lu = 5,99 pour un niveau de signification de 5%
-- Conclusion: Nous rejetons l'hypothèse nulle. L'éducation a un effet significatif sur la mortalité infantile.
+## Test d'hypothèses
+
+>- LR = -2*(-2319,2534 +2315,8856) = 6,74
+
+>- Chi-deux lu = 5,99 pour un niveau de signification de 5%
+
+>- Conclusion: Nous rejetons l'hypothèse nulle. L'éducation a un effet significatif sur la mortalité infantile.
 
 ## Extension
 
@@ -316,6 +409,7 @@ Autres éléments à considérer
   - Probit / logit ordonné
   - Il existe un classement clair entre les modalités
   - Ex. Quintile de richesse
+
 - Logit / probit multinomial
   - Pas d'ordre, mais groupe distinct
   - Ex. Statut de travail (non, formel, informel)
